# oracledb-file-transfer

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/.devcontainer/: devcontainer.json
cli/: Dockerfile
lambda/: Dockerfile  lambda-requirements.txt  lambda_handler.py
src/oracledb_file_transfer/: __init__.py  lob.py  oracledirectory.py
src/oracledb_file_transfer/entrypoints/: aws_lambda.py  cli.py
tests/: docker-compose.yml  test_transfer.py
